    . Make ->set_visible also support select+option inputs
0.64 201203xx
    ! Bump prerequisite for MozRepl::RemoteObject to 0.30, which contains
      a bugfix for clobbered $@
    . Add test for clicking a button by value
    . Add test for clicking a button by id
    . Add test for ->new(tab => 'current')
    . Add test for ->new(tab => 'non-existing-tab')

0.63 20120316
    ! Fix bad test from v0.62, no other code changes

0.62 20120316
    ! Fix bug in ->form_number that made it always fail when there
      was more than a single form on a page. Reported by Blake Willmarth.
    ! Explicitly import sleep() from Time::HiRes
    . Clean up list of imports, explicitly only importing what we need
    . Add explicit prerequisites of Cwd, File::Basename
    ! Cwd.pm now is only loaded in the one routine that needs it. This
      will be an issue for you if you package WWW::Mechanize::Firefox
      with PAR or App::fatpacker. You may need to review your list of
      automatically included modules.

0.61 20120312
    . Fix code errors in WWW::Mechanize::Firefox::Cookbook
    . Allow to create a WWW::Mechanize::Firefox object if you already have
      an existing Firefox tab object.

0.60 20120302
    . Fix test failing when Image::Info was unavailable
    ! Fix scaling bug in ->element_as_png()

0.59 20120211
    + Report Javascript errors from the perspective of the caller
      instead of a location in WWW::Mechanize::Firefox
    ! ->wait_until_invisible() requeries selectors now instead
      of only querying them once.
    + Add target size options when converting HTML to PNG
    + WWW::Mechanize::Firefox is currently tested against the following versions
        - 3.0.19
        - 3.5.19
        - 3.6.19
        - 5.0.1
        - 6.0.1
        - 7.0.1
        - 8.0
        - 9.0
        - 10.0

0.58 20111128
    ! Fix cookie handling which was weirdly broken yet the tests passed.
      Session cookies now get returned
      Thanks to blakew for pointing that out